2000-11-07  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECKING): Is not an alias of AC_MSG_NOTICE,
	hence use AU_DEFUN, not AU_ALIAS.

2000-11-03  Jim Meyering  <meyering@lucent.com>

	* acfunctions.m4 (AC_FUNC_FNMATCH): Add a test to detect
	the d*/*1 vs d/s/1 bug.
	Add a couple more test cases to catch bugs in glibc 2.1.95.
	Include fnmatch.h unconditionally
	Mention the GNU C library.
	From Paul Eggert.

2000-11-03  Akim Demaille  <akim@epita.fr>

	AC_CONFIG_AUX_DIR_DEFAULTS overrides AC_CONFIG_AUX_DIR.  Ouch.
	Reported by Paul Martinolich.

	* acgeneral.m4 (AC_PROVIDE): Don't forget to `m4_provide'!!!
	Tss, novice...
	* tests/base.at (AC_REQUIRE & AC_PROVIDE): New test.

2000-11-03  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_location): When using its value, don't use
	`m4_defn', since m4_location is not a variable, it's a macro which
	expands to __file__:__line__.
	* tests/m4sugar.at (m4_warn): New test.

2000-11-03  Akim Demaille  <akim@epita.fr>

	* tests/tools.at (unexpanded macros): Strengthen.
	* autoconf.sh (finalize.awk): Use `sub' instead of `index' +
	`substr'.
	More comments.

2000-11-03  Akim Demaille  <akim@epita.fr>

	* Makefile.am (.m4.m4f): Check that processing produces only
	comments and empty lines.
	Check that freezing produced no output.
	* m4sugar.m4: Commentize what was not.
	* m4sh.m4: Likewise.
	* aclang.m4: Formatting changes.

2000-11-03  Akim Demaille  <akim@epita.fr>

	* autoconf.m4 (define): Reestablish only after having read the
	`ac' files.
	Adjust all the Autoconf code to use `m4_define', not `define'.

2000-11-03  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AU_ALIAS): Don't forget to pass the arguments to
	the new macro...
	Reported by Ezra Peisach.
	* tests/semantics.m4 (AC_HAVE_FUNCS): New test.
	* tests/tools.at (autoupdate): As a benign side effect, updating a
	macro that takes no argument produces `UPDATED([])', no longer
	`UPDATED()'.  Adjust the test.

2000-11-03  Akim Demaille  <akim@epita.fr>
