@@ -13,6 +13,7 @@ AT_CHECK_MACRO([AC_ARG_ENABLE])
 AT_CHECK_MACRO([AC_ARG_PROGRAM])
 AT_CHECK_MACRO([AC_ARG_WITH])
 AT_CHECK_MACRO([AC_CANONICAL_TARGET])
+AT_CHECK_MACRO([AC_CHECKING])
 AT_CHECK_MACRO([AC_CHECK_TOOL_PREFIX])
 AT_CHECK_MACRO([AC_COMPILE_CHECK])
 AT_CHECK_MACRO([AC_C_BIGENDIAN])
