@@ -8,6 +8,7 @@ EOF
 
 
 AT_CHECK_UPDATE([AC_ARG_ARRAY])
+AT_CHECK_UPDATE([AC_CHECKING])
 AT_CHECK_UPDATE([AC_CHECK_TOOL_PREFIX])
 AT_CHECK_UPDATE([AC_COMPILE_CHECK])
 AT_CHECK_UPDATE([AC_CYGWIN])
